syntax = "proto3";
package gpio_types;

enum GpioState {
  GPIO_STATE_UNSPECIFIED = 0;
  GPIO_STATE_LOW = 1;
  GPIO_STATE_HIGH = 2;
}

enum GpioDirection {
  GPIO_DIRECTION_UNSPECIFIED = 0;
  GPIO_DIRECTION_OUT = 1;
  GPIO_DIRECTION_IN = 2;
}

message GpioValue {
  oneof value {
    string str_val = 1;
    int32 int_val = 2;
  }
}

message GpioMetadata {
  GpioState state = 1;
  GpioDirection direction = 2;
  GpioValue value = 3;
}